Update jre to 21